# guile-cps-debugger

./: .dir-locals.el  .gitignore  CHANGELOG.md  CONTINUATION-PATTERNS.org  DEMO.org  Makefile  Makefile.am  README.md  README.org  VISUALIZER-DEMO.org  auto-demo.sh  configure.ac  cps-debugger-visualizer.el  cps-debugger.el  cps-debugger.scm  demo-script.md  demo-session.sh  demo-walkthrough.txt  make  record-demo.sh  record-org-demo.sh  run-tests.scm  simple-demo.scm  test-visualizer.scm  tmux-demo.sh  visualizer-output.mmd
cps-debugger/: analysis.scm  cli.scm  compat.scm  core.scm  fold.scm  inspector.scm  position.scm  pretty.scm  repl-commands.scm  repl.scm  session.scm  stepper.scm  visualizer.scm
demo/: README.md  cps-debugger-demo.cast  emacs-org-demo.cast  org-mode-demo.cast
diagrams/: ackermann-cps-flow.mmd  fibonacci-cps.mmd  gcd-cps.mmd  product-list-cps-flow.mmd  tree-sum-cps-flow.mmd
docs/: Makefile.am  gdb-debugging-guide.md
examples/: Makefile.am  advanced-analysis.scm  advanced-continuations.scm  analysis-demo.scm  basic-usage.scm  demo-basic.scm  demo-repl.scm  inspect-lambda.scm  interactive-debugging.scm  pretty-print-demo.scm  repl-debugging.scm  visualizer-examples.scm
src/: Makefile.am  config.scm
src/analysis/: continuation.scm  memory.scm
src/core/: debugger.scm
src/ui/: repl-commands.scm  visualizer.scm
tests/: Makefile.am  run-tests.scm  test-analysis.scm  test-compat.scm  test-core.scm  test-framework.scm  test-inspector.scm  test-pretty.scm
